#12083. containerize app and setup image building ci