@@ -29,6 +29,7 @@
 		<gt-geojson.version>26-SNAPSHOT</gt-geojson.version>
 		<spatial4j.version>0.8</spatial4j.version>
 		<jts-core.version>1.18.1</jts-core.version>
+		<jib.source.image>openjdk:16-alpine</jib.source.image>
 	</properties>
 
 	<dependencies>
@@ -106,6 +107,17 @@
 			<groupId>io.github.openfeign</groupId>
 			<artifactId>feign-micrometer</artifactId>
 			<version>${feign-micrometer.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback.contrib</groupId>
+			<artifactId>logback-jackson</artifactId>
+			<version>0.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback.contrib</groupId>
+			<artifactId>logback-json-classic</artifactId>
+			<version>0.1.5</version>
 		</dependency>
 
 		<!-- Database -->
@@ -379,6 +391,35 @@
 				<configuration>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 					<trimStackTrace>false</trimStackTrace>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.2.1</version>
+				<configuration>
+					<container>
+						<mainClass>io.kontur.eventapi.EventapiApplication</mainClass>
+						<jvmFlags>
+							<!--<jvmFlag>-javaagent:/opentelemetry/opentelemetry-javaagent.jar</jvmFlag>-->
+							<jvmFlag>-Dlogging.config=classpath:logback-stdout-json.xml</jvmFlag>
+							<jvmFlag>-server</jvmFlag>
+							<jvmFlag>-Xmx10g</jvmFlag>
+							<jvmFlag>-Xms8g</jvmFlag>
+							<jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>
+							<!--<jvmFalg>-XX:HeapDumpPath=/tmp/eventapi_oom.hprof</jvmFalg>-->
+							<!--<jvmFlag>-Xlog:gc*:file=%h/log/event-api.GC.log</jvmFlag>-->
+						</jvmFlags>
+						<ports>
+							<port>8624</port>
+						</ports>
+					</container>
+					<from>
+						<image>nexus.kontur.io:8084/library/${jib.source.image}</image>
+					</from>
+					<to>
+						<image>nexus.kontur.io:8085/konturdev/${project.name}:${project.version}</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
